--- a/style.css
+++ b/style.css
@@ -118,8 +118,9 @@ header {
 .motto a {
     text-decoration: none;
     color: black;
-    padding: 0 20px;
+    padding: 10px 20px;
     font-size: 17px;
+    background-color: white;
 }
 
 .motto a:hover {
